--- a/src/assets/css/tailwind-output.css
+++ b/src/assets/css/tailwind-output.css
@@ -535,6 +535,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-column: span 1 / span 1;
 }
 
+.col-start-1 {
+  grid-column-start: 1;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -602,6 +606,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mt-6 {
   margin-top: 1.5rem;
+}
+
+.-mt-10 {
+  margin-top: -2.5rem;
 }
 
 .inline-block {
@@ -692,12 +700,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -722,10 +734,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .justify-center {
   justify-content: center;
-}
-
-.justify-items-center {
-  justify-items: center;
 }
 
 .gap-6 {
@@ -764,8 +772,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   gap: 1.25rem;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
+}
+
+.whitespace-pre {
+  white-space: pre;
 }
 
 .rounded-md {
@@ -838,14 +854,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 6rem;
 }
 
+.p-20 {
+  padding: 5rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
+}
+
 .px-24 {
   padding-left: 6rem;
   padding-right: 6rem;
-}
-
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
 }
 
 .py-1 {
@@ -888,9 +907,34 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 4rem;
 }
 
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
 .py-2\.5 {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .pl-6 {
@@ -923,11 +967,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
@@ -941,6 +980,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-base {
@@ -1030,20 +1074,116 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 @media (min-width: 640px) {
+  .sm\:mr-5 {
+    margin-right: 1.25rem;
+  }
+
+  .sm\:ml-5 {
+    margin-left: 1.25rem;
+  }
+
+  .sm\:block {
+    display: block;
+  }
+
   .sm\:flex {
     display: flex;
   }
 
-  .sm\:hidden {
-    display: none;
+  .sm\:grid {
+    display: grid;
+  }
+
+  .sm\:w-1\/2 {
+    width: 50%;
+  }
+
+  .sm\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .sm\:flex-1 {
+    flex: 1 1 0%;
+  }
+
+  .sm\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .sm\:gap-48 {
+    gap: 12rem;
+  }
+
+  .sm\:gap-36 {
+    gap: 9rem;
+  }
+
+  .sm\:p-24 {
+    padding: 6rem;
+  }
+
+  .sm\:p-10 {
+    padding: 2.5rem;
+  }
+
+  .sm\:py-12 {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+}
+
+@media (max-width: 640px) {
+  .sm-only\:col-span-4 {
+    grid-column: span 4 / span 4;
+  }
+
+  .sm-only\:col-span-3 {
+    grid-column: span 3 / span 3;
+  }
+
+  .sm-only\:mt-4 {
+    margin-top: 1rem;
+  }
+
+  .sm-only\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+
+  .sm-only\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
+  .sm-only\:grid {
+    display: grid;
+  }
+
+  .sm-only\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
+  .sm-only\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .sm-only\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm-only\:gap-4 {
+    gap: 1rem;
+  }
+
+  .sm-only\:gap-40 {
+    gap: 10rem;
+  }
+
+  .sm-only\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
 
 @media (min-width: 768px) {
-  .md\:absolute {
-    position: absolute;
-  }
-
   .md\:flex-row {
     flex-direction: row;
   }
@@ -1054,6 +1194,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 @media (max-width: 768px) {
+  .md-only\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
   .md-only\:mb-7 {
     margin-bottom: 1.75rem;
   }
@@ -1066,48 +1210,12 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-right: 1.25rem;
   }
 
-  .md-only\:mb-5 {
-    margin-bottom: 1.25rem;
-  }
-
-  .md-only\:grid {
-    display: grid;
-  }
-
   .md-only\:h-full {
     height: 100%;
   }
 
-  .md-only\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .md-only\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .md-only\:grid-rows-3 {
-    grid-template-rows: repeat(3, minmax(0, 1fr));
-  }
-
-  .md-only\:gap-10 {
-    gap: 2.5rem;
-  }
-
-  .md-only\:gap-24 {
-    gap: 6rem;
-  }
-
-  .md-only\:gap-28 {
-    gap: 7rem;
-  }
-
-  .md-only\:gap-32 {
-    gap: 8rem;
-  }
-
-  .md-only\:gap-36 {
-    gap: 9rem;
   }
 
   .md-only\:gap-40 {
@@ -1119,17 +1227,8 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-bottom: 0px;
   }
 
-  .md-only\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-
   .md-only\:text-center {
     text-align: center;
-  }
-
-  .md-only\:text-justify {
-    text-align: justify;
   }
 
   .md-only\:text-xl {
@@ -1143,6 +1242,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 @media (min-width: 1024px) {
+  .lg\:absolute {
+    position: absolute;
+  }
+
   .lg\:flex {
     display: flex;
   }
@@ -1190,5 +1293,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:text-left {
     text-align: left;
+  }
+
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
